2019年 6月 7日 金曜日 21時45分41秒 JST

--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,7 @@
 title: Demo
 description: |-2
+  LMSX のデモと使用方法をまとめた講義．
+
   This lecture demonstrates features of LMSX and describes how to use it.
 
 global_variables:
