2019年 6月 7日 金曜日 23時50分28秒 JST

--- a/contents/act03.yaml
+++ b/contents/act03.yaml
@@ -7,7 +7,7 @@ description: |-2
   次の連立方程式を解く Python のプログラムを Numpy を用いて作成せよ:
   <% end %>
   <% if @language == 'English' %>
-  Make a Python program with Numpy that solves the following simultaneous equation:
+  Make a Python program that solves the following simultaneous equation using Numpy:
   <% end %>
 
   ```math
