2019年 6月 7日 金曜日 23時59分46秒 JST

--- a/contents/act04.yaml
+++ b/contents/act04.yaml
@@ -7,7 +7,7 @@ description: |-2
   論文は PDF ファイルとする．
   <% end %>
   <% if @language == 'English' %>
-  Write an article on the subject of "Zur Elektrodynamik bewegter Körper".
+  Write an article on the theme of "Zur Elektrodynamik bewegter Körper".
   The paper should be create as a PDF file.
   <% end %>
 
