2019年 6月 8日 土曜日 00時00分09秒 JST

--- a/contents/act05.yaml
+++ b/contents/act05.yaml
@@ -5,7 +5,7 @@ description: |-2
   <% if @language == 'Japanese' %>
   次の問に答えよ．
   <% end %>
-  <% if @language == 'Japanese' %>
+  <% if @language == 'English' %>
   Answer following questions.
   <% end %>
 
