2019年 6月 8日 土曜日 00時15分32秒 JST

--- a/meta.yaml
+++ b/meta.yaml
@@ -4,6 +4,12 @@ description: |-2
 
   This lecture demonstrates features of LMSX and describes how to use it.
 
+tags:
+  - groupA
+  - groupB
+  - groupC
+  - groupD
+
 global_variables:
 
   language:
