2019年 6月 8日 土曜日 00時18分32秒 JST

--- a/meta.yaml
+++ b/meta.yaml
@@ -5,10 +5,10 @@ description: |-2
   This lecture demonstrates features of LMSX and describes how to use it.
 
 tags:
-  - groupA
-  - groupB
-  - groupC
-  - groupD
+  groupA: Annotate that a user belongs the group A
+  groupB: Annotate that a user belongs the group B
+  groupC: Annotate that a user belongs the group C
+  groupD: Annotate that a user belongs the group D
 
 global_variables:
 
