2019年 6月 8日 土曜日 12時05分30秒 JST

--- a/images/docker-compose.yaml
+++ b/images/docker-compose.yaml
@@ -19,4 +19,13 @@ services:
       context: .
       dockerfile: Dockerfile-python3
     mem_limit: 500m
-    
+  
+  octave:
+    container_name: octave
+    environment:
+      TZ: Asia/Tokyo
+    build:
+      context: .
+      dockerfile: Dockerfile-octave
+    mem_limit: 500m
+ 
